# pmsdr-2.5.1

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  Si570.c  Si570.h  cmdparser.c  cmdparser.h  config.h  config.h.in  config.status  configure  configure.ac  libpmsdr.la  libpmsdr_la-Si570.lo  libpmsdr_la-pmsdr_ctrl.lo  libpmsdr_la-pmsdr_err.lo  libtool  log.h  pmsdr  pmsdr.c  pmsdr.h  pmsdr.pod  pmsdr_ctrl.c  pmsdr_ctrl.h  pmsdr_dyn  pmsdr_dyn.man  pmsdr_err.c  udp_cmd.c  udp_cmd.h
.deps/: Si570.Po  cmdparser.Po  libpmsdr_la-Si570.Plo  libpmsdr_la-pmsdr_ctrl.Plo  libpmsdr_la-pmsdr_err.Plo  pmsdr.Po  pmsdr_ctrl.Po  pmsdr_err.Po  udp_cmd.Po
.libs/: libpmsdr.la  libpmsdr.lai  libpmsdr.so.1  libpmsdr.so.1.1.0  pmsdr_dyn
